--- a/eventhall.html
+++ b/eventhall.html
@@ -774,7 +774,7 @@ Third Floor
                         <div class="single-widget subscribe-widget" data-aos="fade-up" data-aos-delay="800">
                             <h6 class="widget-tiltle">Subscribe us</h6>
                             <p>Sign up for our mailing list to get latest updates and offers</p>
-                            <form role="form" action="https://script.google.com/macros/s/AKfycbzr_1yM36tdllc0wdDndc2yVnrc-HPnr98Xy-26/exec" class="gform pure-form pure-form-stacked contact-form" method="post" onsubmit="alert('Email Submitted!');return false">
+                            <form role="form" action="https://script.google.com/macros/s/AKfycby-Aa1Ayf9cCdLfAShJ9OHp1iWAeM-3TDFQ1ovVvQ/exec" class="gform pure-form pure-form-stacked contact-form" method="post" onsubmit="alert('Email Submitted!');return false">
                                 <div class="input-group form-group">
                                     <input class="field form-control" id="email" name="email" type="email" placeholder="Email Address" required >
 									  <span class="input-group-btn form-group">
@@ -788,7 +788,7 @@ Third Floor
                                 <li><a href="https://www.facebook.com/ggeventshall" target="_blank"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="mailto: info@ggeventhalls.com"><i class="fa fa-envelope"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="https://wa.me/+2347067684009?text=Hello%2C%20I%20would%20like%20to%20know%20more%20about%20Great%20God%20Eventshall%20services..."><i class="fa fa-whatsapp"></i></a></li>
                             </ul>
                         </div>
                     </div>
