--- a/contact.html
+++ b/contact.html
@@ -400,7 +400,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             <div class="row text-center">
                 <div class="col-md-8">
-					<form class="gform pure-form pure-form-stacked" role="form" name="contactform" action="https://script.google.com/macros/s/AKfycbxIwp63YFm_OjIKe_RNY-_2m0eu9PkIU-UHo7qp/exec" method="POST" onsubmit="window.open('submit.html', '_blank', 'scrollbars=no,menubar=no,height=600,width=1600,resizable=yes,toolbar=no,status=no');return true;">                        
+					<form class="gform pure-form pure-form-stacked" role="form" name="contactform" action="https://script.google.com/macros/s/AKfycby-Aa1Ayf9cCdLfAShJ9OHp1iWAeM-3TDFQ1ovVvQ/exec" method="POST" onsubmit="window.open('submit.html', '_blank', 'scrollbars=no,menubar=no,height=600,width=1600,resizable=yes,toolbar=no,status=no');return true;">                        
 						<div class="row">
                            <div class="col-xl-6 form-group">
                               <input type="text" class="form-control" placeholder="name" id="name" name="name" required>
@@ -531,7 +531,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="single-widget subscribe-widget" data-aos="fade-up" data-aos-delay="800">
                             <h6 class="widget-tiltle">Subscribe us</h6>
                             <p>Sign up for our mailing list to get latest updates and offers</p>
-                            <form role="form" action="https://script.google.com/macros/s/AKfycbzr_1yM36tdllc0wdDndc2yVnrc-HPnr98Xy-26/exec" class="gform pure-form pure-form-stacked contact-form" method="POST" enctype="multipart/form-data" onsubmit="alert('Email Submitted!');return false">
+                            <form role="form" action="https://script.google.com/macros/s/AKfycby-Aa1Ayf9cCdLfAShJ9OHp1iWAeM-3TDFQ1ovVvQ/exec" class="gform pure-form pure-form-stacked contact-form" method="POST" enctype="multipart/form-data" onsubmit="alert('Email Submitted!');return false">
                                 <div class="input-group form-group">
                                     <input class="field form-control" id="email" name="email" type="email" placeholder="Email Address" required >
 									  <span class="input-group-btn form-group">
@@ -545,7 +545,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <li><a href="https://www.facebook.com/ggeventshall" target="_blank"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="mailto: info@ggeventhalls.com"><i class="fa fa-envelope"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="https://wa.me/+2347067684009?text=Hello%2C%20I%20would%20like%20to%20know%20more%20about%20Great%20God%20Eventshall%20services..."><i class="fa fa-whatsapp"></i></a></li>
                             </ul>
                         </div>
                     </div>
