--- a/Kingstine-JoFoods.html
+++ b/Kingstine-JoFoods.html
@@ -389,14 +389,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<div class="col-sm-6 col-lg-6">
 						<div class="media" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
 							<div class="picture">
-								<img src="https://img.foodbevg.com/1/v/t1.0-9/s720x720/64932854_954997424892358_5894168419858644992_n.png?_nc_cat=103&_nc_oc=AQn6ShvMPTfhs4ep-VXlVCRvx8QJZlSHMufbuw7P9mrDLOzqBZCGRE9ehvfCoXi4U6NkpczL-X2dEZXN5qUok28K&_nc_ht=scontent.xx&oh=4e070976e65e61a0f12ccd8912955c16&oe=5D7B9879"  height="525" width="475" class="img-responsive" style="padding:2% 15% 2% 5%;">
+								<img src="assets/images/kjfish.jpg"  height="525" width="475" class="img-responsive" style="padding:2% 15% 2% 5%;">
 							</div>
 						</div></div>
 						
 						<div class="col-sm-6 col-lg-6">
 						<div class="media" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
 							<div class="picture">
-								<img src="https://scontent-lga3-1.cdninstagram.com/vp/77b151f7d3d4d5d138775fbfc9d8015c/5DB83B42/t51.2885-15/fr/e15/s1080x1080/58722677_526863451051483_2774287056960760170_n.jpg?_nc_ht=scontent-lga3-1.cdninstagram.com" height="525" width="475" class="img-responsive" style="padding:2% 15% 2% 5%;">
+								<img src="assets/images/kjall.jpg" height="525" width="475" class="img-responsive" style="padding:2% 15% 2% 5%;">
 							</div>
 						</div></div>
 							
