--- a/index.html
+++ b/index.html
@@ -1413,7 +1413,7 @@ Utilise our well situated shops to propel your business forward with access to t
                         <p class="desc">Hall1 - 600 Seaters</p>
                         <p class="price">&#8358 200,000</p>
                         <p>Access to great & amazing event hall amenities </p>
-                        <a href="https://wa.me/2347067684009?text=Hello%2C%20I%20would%20like%20to%20book%20your%20Hall1%20-%20600%20Seaters%20ggeventshall%20package..." class="btn btn-primary">Book Now</a>
+                        <a href="https://wa.me/2347067684009?text=Hello%2C%20I%20would%20like%20to%20book%20your%20Hall1%20-%20600%20Seaters%20ggeventshall%20Starter%20package..." class="btn btn-primary">Book Now</a>
                         <svg viewBox="0 0 170 193">
                             <path fill-rule="evenodd" fill="rgb(238, 21, 21)"
                                 d="M39.000,31.999 C39.000,31.999 -21.000,86.500 9.000,121.999 C39.000,157.500 91.000,128.500 104.000,160.999 C117.000,193.500 141.000,201.000 150.000,183.000 C159.000,165.000 172.000,99.000 167.000,87.000 C162.000,75.000 170.000,63.000 152.000,45.000 C134.000,27.000 128.000,15.999 116.000,11.000 C104.000,6.000 89.000,-0.001 89.000,-0.001 L39.000,31.999 Z" />
@@ -1424,14 +1424,14 @@ Utilise our well situated shops to propel your business forward with access to t
                     <div class="single-pricing text-center" data-aos="fade-up" data-aos-delay="300"
                         data-aos-duration="600">
                         <span>per event</span>
-                        <h2>Starter</h2>
+                        <h2>Deluxe</h2>
                         <p class="desc">Hall2 - Dual Space</p>
                         <p class="price">&#8358 300,000</p>
                         <p>Fully Air - conditioned Halls</p>
                         <p>Free Changing Room</p>
                         <p>Access to Stage/Platform</p>
                         <p>Free Store room</p>
-                        <a href="https://wa.me/2347067684009?text=Hello%2C%20I%20would%20like%20to%20book%20your%20Hall2%20-%20Dual%20Space%20ggeventshall%20package..." class="btn btn-primary">Book Now</a>
+                        <a href="https://wa.me/2347067684009?text=Hello%2C%20I%20would%20like%20to%20book%20your%20Hall2%20-%20Dual%20Space%20ggeventshall%20Deluxe%20package..." class="btn btn-primary">Book Now</a>
                         <svg viewBox="0 0 170 193">
                             <path fill-rule="evenodd" fill="rgb(238, 21, 21)"
                                 d="M39.000,31.999 C39.000,31.999 -21.000,86.500 9.000,121.999 C39.000,157.500 91.000,128.500 104.000,160.999 C117.000,193.500 141.000,201.000 150.000,183.000 C159.000,165.000 172.000,99.000 167.000,87.000 C162.000,75.000 170.000,63.000 152.000,45.000 C134.000,27.000 128.000,15.999 116.000,11.000 C104.000,6.000 89.000,-0.001 89.000,-0.001 L39.000,31.999 Z" />
@@ -1442,11 +1442,11 @@ Utilise our well situated shops to propel your business forward with access to t
                     <div class="single-pricing text-center" data-aos="fade-up" data-aos-delay="600"
                         data-aos-duration="600">
                         <span>per event</span>
-                        <h2>Starter</h2>
+                        <h2>Premium</h2>
                         <p class="desc">Hall3 - 1200 Seaters</p>
                         <p class="price">&#8358 150,000+</p>
                         <p>Access to great & amazing event hall amenities</p>
-                        <a href="https://wa.me/2347067684009?text=Hello%2C%20I%20would%20like%20to%20book%20your%20Hall3%20-%201200%20Seaters%20ggeventshall%20package..." class="btn btn-primary">Book Now</a>
+                        <a href="https://wa.me/2347067684009?text=Hello%2C%20I%20would%20like%20to%20book%20your%20Hall3%20-%201200%20Seaters%20ggeventshall%20Premium%20package..." class="btn btn-primary">Book Now</a>
                         <svg viewBox="0 0 170 193">
                             <path fill-rule="evenodd" fill="rgb(238, 21, 21)"
                                 d="M39.000,31.999 C39.000,31.999 -21.000,86.500 9.000,121.999 C39.000,157.500 91.000,128.500 104.000,160.999 C117.000,193.500 141.000,201.000 150.000,183.000 C159.000,165.000 172.000,99.000 167.000,87.000 C162.000,75.000 170.000,63.000 152.000,45.000 C134.000,27.000 128.000,15.999 116.000,11.000 C104.000,6.000 89.000,-0.001 89.000,-0.001 L39.000,31.999 Z" />
@@ -1602,7 +1602,7 @@ Utilise our well situated shops to propel your business forward with access to t
             <div class="container">
                 <div
                     class="footer-content text-center text-lg-left d-lg-flex justify-content-between align-items-center">
-                    <p class="mb-0" data-aos="fade-right" data-aos-offset="0">&copy; 2019 ggeventhalls | All Rights Reserved. <!-- <a href="https://freehtml5.co/multipurpose" target="_blank" class="fh5-link">FreeHTML5.co </a> --> Designed by<a href="https://wa.me/2348187292382?text=Hello%2C%20I%20would%20like%20to%20know%20more%20about%20your%20web%20design%20services...">Eracreative</a></p>
+                    <p class="mb-0" data-aos="fade-right" data-aos-offset="0">@ 2020 ggeventhalls.com, All Rights Reserved. <!-- <a href="https://freehtml5.co/multipurpose" target="_blank" class="fh5-link">FreeHTML5.co </a> --> Designed by<a href="https://wa.me/2348187292382?text=Hello%2C%20I%20would%20like%20to%20know%20more%20about%20your%20web%20design%20services...">Eracreative</a></p>
                     <p class="mb-0" data-aos="fade-left" data-aos-offset="0"><a href="#" class="promotion-btn" onclick="window.open('https://webmail.migadu.com', '_blank');return true;"> <i class="fa fa-weixin" aria-hidden="true"></i>WEB MAIL </a>
 					<a href="#">God is Great!</a></p>
                 </div>
