--- a/shops.html
+++ b/shops.html
@@ -495,7 +495,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="container">
                 <div
                     class="footer-content text-center text-lg-left d-lg-flex justify-content-between align-items-center">
-                    <p class="mb-0" data-aos="fade-right" data-aos-offset="0">@ 2020 ggeventhalls.com, All Rights Reserved. <!-- <a href="https://freehtml5.co/multipurpose" target="_blank" class="fh5-link">FreeHTML5.co </a> --> Designed by<a href="https://wa.me/2348187292382?text=Hello%2C%20I%20would%20like%20to%20know%20more%20about%20your%20web%20design%20services...">Eracreative</a></p>
+                    <p class="mb-0" data-aos="fade-right" data-aos-offset="0">&copy; 2020 ggeventhalls.com, All Rights Reserved.<!-- <a href="https://freehtml5.co/multipurpose" target="_blank" class="fh5-link">FreeHTML5.co </a> --> Designed by<a href="https://wa.me/2348187292382?text=Hello%2C%20I%20would%20like%20to%20know%20more%20about%20your%20web%20design%20services...">Eracreative</a></p>
                     <p class="mb-0" data-aos="fade-left" data-aos-offset="0"><a href="#" class="promotion-btn" onclick="window.open('https://webmail.migadu.com', '_blank');return true;"> <i class="fa fa-weixin" aria-hidden="true"></i>WEB MAIL </a>
 					<a href="#">God is Great!</a></p>
                 </div>
